--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "swiper": "^4.5.0",
     "vant": "^1.6.14",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.6"
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.6.0",
